cmake_minimum_required(VERSION 3.14)

project(QSvgRen LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets Quick)

add_library(QSvgRen STATIC
    QSvgRen.cpp
    QSvgRen.h
    agg/agg_alpha_mask_u8.h
    agg/agg_arc.h
    agg/agg_array.h
    agg/agg_arrowhead.h
    agg/agg_basics.h
    agg/agg_bezier_arc.h
    agg/agg_bitset_iterator.h
    agg/agg_blur.h
    agg/agg_bounding_rect.h
    agg/agg_bspline.h
    agg/agg_clip_liang_barsky.h
    agg/agg_color_gray.h
    agg/agg_color_rgba.h
    agg/agg_config.h
    agg/agg_conv_adaptor_vcgen.h
    agg/agg_conv_adaptor_vpgen.h
    agg/agg_conv_bspline.h
    agg/agg_conv_clip_polygon.h
    agg/agg_conv_clip_polyline.h
    agg/agg_conv_close_polygon.h
    agg/agg_conv_concat.h
    agg/agg_conv_contour.h
    agg/agg_conv_curve.h
    agg/agg_conv_dash.h
    agg/agg_conv_gpc.h
    agg/agg_conv_marker.h
    agg/agg_conv_marker_adaptor.h
    agg/agg_conv_segmentator.h
    agg/agg_conv_shorten_path.h
    agg/agg_conv_smooth_poly1.h
    agg/agg_conv_stroke.h
    agg/agg_conv_transform.h
    agg/agg_conv_unclose_polygon.h
    agg/agg_curves.h
    agg/agg_dda_line.h
    agg/agg_ellipse.h
    agg/agg_ellipse_bresenham.h
    agg/agg_embedded_raster_fonts.h
    agg/agg_font_cache_manager.h
    agg/agg_font_cache_manager2.h
    agg/agg_gamma_functions.h
    agg/agg_gamma_lut.h
    agg/agg_glyph_raster_bin.h
    agg/agg_gradient_lut.h
    agg/agg_gsv_text.h
    agg/agg_image_accessors.h
    agg/agg_image_filters.h
    agg/agg_line_aa_basics.h
    agg/agg_math.h
    agg/agg_math_stroke.h
    agg/agg_path_length.h
    agg/agg_path_storage.h
    agg/agg_path_storage_integer.h
    agg/agg_pattern_filters_rgba.h
    agg/agg_pixfmt_amask_adaptor.h
    agg/agg_pixfmt_base.h
    agg/agg_pixfmt_gray.h
    agg/agg_pixfmt_rgb.h
    agg/agg_pixfmt_rgb_packed.h
    agg/agg_pixfmt_rgba.h
    agg/agg_pixfmt_transposer.h
    agg/agg_rasterizer_cells_aa.h
    agg/agg_rasterizer_compound_aa.h
    agg/agg_rasterizer_outline.h
    agg/agg_rasterizer_outline_aa.h
    agg/agg_rasterizer_scanline_aa.h
    agg/agg_rasterizer_scanline_aa_nogamma.h
    agg/agg_rasterizer_sl_clip.h
    agg/agg_renderer_base.h
    agg/agg_renderer_markers.h
    agg/agg_renderer_mclip.h
    agg/agg_renderer_outline_aa.h
    agg/agg_renderer_outline_image.h
    agg/agg_renderer_primitives.h
    agg/agg_renderer_raster_text.h
    agg/agg_renderer_scanline.h
    agg/agg_rendering_buffer.h
    agg/agg_rendering_buffer_dynarow.h
    agg/agg_rounded_rect.h
    agg/agg_scanline_bin.h
    agg/agg_scanline_boolean_algebra.h
    agg/agg_scanline_p.h
    agg/agg_scanline_storage_aa.h
    agg/agg_scanline_storage_bin.h
    agg/agg_scanline_u.h
    agg/agg_shorten_path.h
    agg/agg_simul_eq.h
    agg/agg_span_allocator.h
    agg/agg_span_converter.h
    agg/agg_span_gouraud.h
    agg/agg_span_gouraud_gray.h
    agg/agg_span_gouraud_rgba.h
    agg/agg_span_gradient.h
    agg/agg_span_gradient_alpha.h
    agg/agg_span_gradient_contour.h
    agg/agg_span_gradient_image.h
    agg/agg_span_image_filter.h
    agg/agg_span_image_filter_gray.h
    agg/agg_span_image_filter_rgb.h
    agg/agg_span_image_filter_rgba.h
    agg/agg_span_interpolator_adaptor.h
    agg/agg_span_interpolator_linear.h
    agg/agg_span_interpolator_persp.h
    agg/agg_span_interpolator_trans.h
    agg/agg_span_pattern_gray.h
    agg/agg_span_pattern_rgb.h
    agg/agg_span_pattern_rgba.h
    agg/agg_span_solid.h
    agg/agg_span_subdiv_adaptor.h
    agg/agg_trans_affine.h
    agg/agg_trans_bilinear.h
    agg/agg_trans_double_path.h
    agg/agg_trans_perspective.h
    agg/agg_trans_single_path.h
    agg/agg_trans_viewport.h
    agg/agg_trans_warp_magnifier.h
    agg/agg_vcgen_bspline.h
    agg/agg_vcgen_contour.h
    agg/agg_vcgen_dash.h
    agg/agg_vcgen_markers_term.h
    agg/agg_vcgen_smooth_poly1.h
    agg/agg_vcgen_stroke.h
    agg/agg_vcgen_vertex_sequence.h
    agg/agg_vertex_sequence.h
    agg/agg_vpgen_clip_polygon.h
    agg/agg_vpgen_clip_polyline.h
    agg/agg_vpgen_segmentator.h
    agg/ctrl/agg_bezier_ctrl.h
    agg/ctrl/agg_cbox_ctrl.h
    agg/ctrl/agg_ctrl.h
    agg/ctrl/agg_gamma_ctrl.h
    agg/ctrl/agg_gamma_spline.h
    agg/ctrl/agg_polygon_ctrl.h
    agg/ctrl/agg_rbox_ctrl.h
    agg/ctrl/agg_scale_ctrl.h
    agg/ctrl/agg_slider_ctrl.h
    agg/ctrl/agg_spline_ctrl.h
    agg/util/agg_color_conv.h
    agg/util/agg_color_conv_rgb16.h
    agg/util/agg_color_conv_rgb8.h
    cssom/om.hpp
    cssom/parser.hpp
    mikroxml/mikroxml.hpp
    papki/file.hpp
    papki/fs_file.hpp
    papki/root_dir.hpp
    papki/span_file.hpp
    papki/unzip/crypt.hxx
    papki/unzip/ioapi.hxx
    papki/unzip/unzip.hxx
    papki/util.hpp
    papki/vector_file.hpp
    papki/zip_file.hpp
    r4/matrix.hpp
    r4/quaternion.hpp
    r4/rectangle.hpp
    r4/segment2.hpp
    r4/vector.hpp
    svgdom/config.hpp
    svgdom/dom.hpp
    svgdom/elements/aspect_ratioed.hpp
    svgdom/elements/container.hpp
    svgdom/elements/coordinate_units.hpp
    svgdom/elements/element.hpp
    svgdom/elements/filter.hpp
    svgdom/elements/gradients.hpp
    svgdom/elements/image_element.hpp
    svgdom/elements/rectangle.hpp
    svgdom/elements/referencing.hpp
    svgdom/elements/shapes.hpp
    svgdom/elements/structurals.hpp
    svgdom/elements/style.hpp
    svgdom/elements/styleable.hpp
    svgdom/elements/text_element.hpp
    svgdom/elements/transformable.hpp
    svgdom/elements/view_boxed.hpp
    svgdom/length.hpp
    svgdom/malformed_svg_error.hpp
    svgdom/parser.hxx
    svgdom/util.hxx
    svgdom/util/casters.hpp
    svgdom/util/cloner.hpp
    svgdom/util/finder_by_class.hpp
    svgdom/util/finder_by_id.hpp
    svgdom/util/finder_by_tag.hpp
    svgdom/util/stream_writer.hpp
    svgdom/util/style_stack.hpp
    svgdom/util/style_stack_cache.hpp
    svgdom/visitor.hpp
    svgren/canvas.hxx
    svgren/config.hxx
    svgren/filter_applier.hxx
    svgren/render.hpp
    svgren/renderer.hxx
    svgren/surface.hxx
    svgren/util.hxx
    utki/config.hpp
    utki/debug.hpp
    utki/destructable.hpp
    utki/exception.hpp
    utki/fast_float/ascii_number.hxx
    utki/fast_float/decimal_to_binary.hxx
    utki/fast_float/fast_float.hxx
    utki/fast_float/fast_table.hxx
    utki/fast_float/float_common.hxx
    utki/fast_float/parse_number.hxx
    utki/fast_float/simple_decimal_conversion.hxx
    utki/flags.hpp
    utki/linq.hpp
    utki/macros.hpp
    utki/math.hpp
    utki/shared.hpp
    utki/shared_ref.hpp
    utki/singleton.hpp
    utki/sort.hpp
    utki/span.hpp
    utki/spin_lock.hpp
    utki/string.hpp
    utki/time.hpp
    utki/tree.hpp
    utki/types.hpp
    utki/unicode.hpp
    utki/util.hpp
    utki/windows.hpp
    zlib/crc32.h
    zlib/deflate.h
    zlib/gzguts.h
    zlib/inffast.h
    zlib/inffixed.h
    zlib/inflate.h
    zlib/inftrees.h
    zlib/trees.h
    zlib/zconf.h
    zlib/zlib.h
    zlib/zutil.h
    agg/agg_arc.cpp
    agg/agg_arrowhead.cpp
    agg/agg_bezier_arc.cpp
    agg/agg_bspline.cpp
    agg/agg_color_rgba.cpp
    agg/agg_curves.cpp
    agg/agg_embedded_raster_fonts.cpp
    agg/agg_gsv_text.cpp
    agg/agg_image_filters.cpp
    agg/agg_line_aa_basics.cpp
    agg/agg_line_profile_aa.cpp
    agg/agg_rounded_rect.cpp
    agg/agg_sqrt_tables.cpp
    agg/agg_trans_affine.cpp
    agg/agg_trans_double_path.cpp
    agg/agg_trans_single_path.cpp
    agg/agg_trans_warp_magnifier.cpp
    agg/agg_vcgen_bspline.cpp
    agg/agg_vcgen_contour.cpp
    agg/agg_vcgen_dash.cpp
    agg/agg_vcgen_markers_term.cpp
    agg/agg_vcgen_smooth_poly1.cpp
    agg/agg_vcgen_stroke.cpp
    agg/agg_vpgen_clip_polygon.cpp
    agg/agg_vpgen_clip_polyline.cpp
    agg/agg_vpgen_segmentator.cpp
    agg/ctrl/agg_bezier_ctrl.cpp
    agg/ctrl/agg_cbox_ctrl.cpp
    agg/ctrl/agg_gamma_ctrl.cpp
    agg/ctrl/agg_gamma_spline.cpp
    agg/ctrl/agg_polygon_ctrl.cpp
    agg/ctrl/agg_rbox_ctrl.cpp
    agg/ctrl/agg_scale_ctrl.cpp
    agg/ctrl/agg_slider_ctrl.cpp
    agg/ctrl/agg_spline_ctrl.cpp
    cssom/om.cpp
    cssom/parser.cpp
    mikroxml/mikroxml.cpp
    papki/file.cpp
    papki/fs_file.cpp
    papki/span_file.cpp
    papki/unzip/ioapi.cpp
    papki/unzip/unzip.cpp
    papki/util.cpp
    papki/vector_file.cpp
    papki/zip_file.cpp
    svgdom/dom.cpp
    svgdom/elements/aspect_ratioed.cpp
    svgdom/elements/element.cpp
    svgdom/elements/filter.cpp
    svgdom/elements/gradients.cpp
    svgdom/elements/image_element.cpp
    svgdom/elements/rectangle.cpp
    svgdom/elements/referencing.cpp
    svgdom/elements/shapes.cpp
    svgdom/elements/structurals.cpp
    svgdom/elements/style.cpp
    svgdom/elements/styleable.cpp
    svgdom/elements/text_element.cpp
    svgdom/elements/transformable.cpp
    svgdom/elements/view_boxed.cpp
    svgdom/length.cpp
    svgdom/parser.cpp
    svgdom/util.cpp
    svgdom/util/cloner.cpp
    svgdom/util/finder_by_class.cpp
    svgdom/util/finder_by_id.cpp
    svgdom/util/finder_by_tag.cpp
    svgdom/util/stream_writer.cpp
    svgdom/util/style_stack.cpp
    svgdom/util/style_stack_cache.cpp
    svgdom/visitor.cpp
    svgren/canvas.cpp
    svgren/filter_applier.cpp
    svgren/render.cpp
    svgren/renderer.cpp
    svgren/surface.cpp
    svgren/util.cpp
    utki/debug.cpp
    utki/string.cpp
    utki/time.cpp
    utki/unicode.cpp
    utki/util.cpp
    zlib/adler32.c
    zlib/compress.c
    zlib/crc32.c
    zlib/deflate.c
    zlib/gzclose.c
    zlib/gzlib.c
    zlib/gzread.c
    zlib/gzwrite.c
    zlib/infback.c
    zlib/inffast.c
    zlib/inflate.c
    zlib/inftrees.c
    zlib/trees.c
    zlib/uncompr.c
    zlib/zutil.c
)

target_include_directories(QSvgRen PRIVATE
    .
    agg/
    zlib/
)

target_link_libraries(QSvgRen PRIVATE
    Qt::Core
    Qt::Gui
    Qt::Widgets
    Qt::Quick
)
target_compile_definitions(QSvgRen PRIVATE QSVGREN_LIBRARY)
